--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,12 @@
     transform: rotate(360deg);
   }
 }
+
+.dark-mode {
+  color: #fff;
+  background-color: #313843;
+}
+.navbar {
+    background-color: #1F2022;
+    border: none;
+  }
